<resources>
    <string name="app_name">My News</string>
    <string name="Notifications">Notifications</string>
    <string name="Help">Help</string>
    <string name="Search">Search Articles</string>

    <!--TITLE TABS-->
    <string name="Tab_1">TOP STORIES</string>
    <string name="Tab_2">MOST POPULAR</string>
    <string name="Tab_3">BUSINESS</string>


    <!-- Fragments TITLE MY NEWS -->
    <string name="Fragment_One">TOP STORIES</string>
    <string name="Fragment_Two">MOST POPULAR</string>
    <string name="Fragment_Three">MOVIE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Menu">Menu</string>


    <!---URL -->
    <string name="urlserver">https://api.nytimes.com/svc/topstories/v2/{section}.json</string>
    <string name="action_settings">Setting</string>
    <string name="section_format">Hello World from sections</string>
    <string name="title">Title</string>
    <string name="image">image</string>
    <string name="section">section</string>
    <string name="date">date</string>
    <string name="description">description</string>
    <string name="subtitle">subtitle</string>
    <string name="subsection">subsection</string>

    <!-- TITLE  Search CheckBox -->
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_business">Business</string>
    <string name="checkbox_entrepreneurs">Entrepreneurs</string>
    <string name="checkbox_politics">Politics</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_travel">Travel</string>
    <string name="button_search">SEARCH</string>
    <string name="search_query_term_editText">Search query term</string>
    <string name="pick_date_begin">Begin Date</string>
    <string name="pick_date_End">End Date</string>
    <string name="begin_date_editText">Begin date</string>
    <string name="end_date_editText">End Date</string>
    <string name="title_activity_n_y_t_web_view">NYTWebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_news_web_view">NewsWebView</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="enable_notifications_once_per_day">enable notifications once per day</string>
    <string name="About">About</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
