<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top">


    <EditText
        android:id="@+id/searchViewArticles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionSearch"
        android:autofillHints="" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pickBeginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date_begin" />

        <EditText
            android:id="@+id/pickEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date_End" />
    </LinearLayout>


        <include
            layout="@layout/search_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:layout_marginTop="20dp"
            android:background="@color/colorTabLayoutBackground"
            android:textColor="@color/design_default_color_on_primary"
            android:layout_margin="10dp"
            />

    </LinearLayout>
